[gd_scene load_steps=20 format=3 uid="uid://c51w6mpx7pg3y"]

[ext_resource type="Script" uid="uid://dpack0v20g5n0" path="res://lessons_reference/video_16/testmap_2.gd" id="1_228y5"]
[ext_resource type="Texture2D" uid="uid://dxblx82ho8rai" path="res://hazy_nebulae_1.png" id="2_pgott"]
[ext_resource type="PackedScene" uid="uid://d3kp34dihjeyd" path="res://lessons_reference/video_16/player/player.tscn" id="3_cyi1s"]
[ext_resource type="PackedScene" uid="uid://xtl5acmpaa04" path="res://lessons_reference/video_16/mob/spawner_3d.tscn" id="4_lehy3"]
[ext_resource type="PackedScene" uid="uid://bpcn5j0ngr8cd" path="res://mob/robot_01.tscn" id="5_ehur8"]
[ext_resource type="PackedScene" uid="uid://dfwbq2vombjvr" path="res://lessons_reference/video_16/mob/mob.tscn" id="6_u7ng2"]
[ext_resource type="Material" uid="uid://cp4gi8r3s3twb" path="res://lessons_reference/video_16/level/platforms.tres" id="9_t6tnk"]
[ext_resource type="PackedScene" uid="uid://c2i8s3i2f88xg" path="res://Large Building.glb" id="10_14fru"]
[ext_resource type="PackedScene" uid="uid://bw4hwvyruch8r" path="res://esset/char/ss2/moon (3).glb" id="11_0q100"]
[ext_resource type="PackedScene" uid="uid://bhbwyw2da3gm3" path="res://level/Easter rabbit.glb" id="12_bdbmc"]
[ext_resource type="Script" uid="uid://kx1spi0ucns2" path="res://lessons_reference/video_16/control.gd" id="13_lfwi1"]
[ext_resource type="PackedScene" uid="uid://b57gaqbqw2guo" path="res://mob/Boss1.tscn" id="13_pgott"]
[ext_resource type="Script" uid="uid://bdmkrk700udsh" path="res://mob/boss_1.gd" id="14_cyi1s"]
[ext_resource type="PackedScene" uid="uid://d3xgwied75pol" path="res://esset/char/International Space Station.glb" id="14_pgott"]
[ext_resource type="FontFile" uid="uid://btoewfkfjj1ws" path="res://esset/THSarabunNew.ttf" id="15_cyi1s"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_f68rl"]
panorama = ExtResource("2_pgott")
energy_multiplier = 3.05

[sub_resource type="Sky" id="Sky_jjgmc"]
sky_material = SubResource("PanoramaSkyMaterial_f68rl")

[sub_resource type="Environment" id="Environment_i6xss"]
background_mode = 2
background_energy_multiplier = 2.0
sky = SubResource("Sky_jjgmc")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xiq5r"]

[node name="Game" type="Node3D"]
script = ExtResource("1_228y5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i6xss")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 0, 4.59512, 1.18414)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="DirectionalLight3D"]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 14.8593, 17.1742, -6.74683)
light_energy = 0.196
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 28.0
offset_top = 15.0
offset_right = 256.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 60
text = "Score: 0"

[node name="Player" parent="." instance=ExtResource("3_cyi1s")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7, 0.773436, -22.2575)

[node name="KillPlane" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -7.95203, -6.5)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillPlane"]
transform = Transform3D(7.37955, 0, 0, 0, 1, 0, 0, 0, 7.80773, 37.5414, 0, 16.3349)
shape = SubResource("WorldBoundaryShape3D_xiq5r")

[node name="MobSpawner3D" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.35906, 0.5, 11.3959)
mob_to_spawn = ExtResource("5_ehur8")

[node name="MobSpawner3D2" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98672, -0.983209, 23.052)
mob_to_spawn = ExtResource("6_u7ng2")

[node name="MobSpawner3D3" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28.0305, 0.219442, -7.90302)
mob_to_spawn = ExtResource("6_u7ng2")

[node name="MobSpawner3D4" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.0981, 3.14008, 41.3197)
mob_to_spawn = ExtResource("5_ehur8")

[node name="MobSpawner3D5" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.19728, -0.838068, 51.3471)
mob_to_spawn = ExtResource("6_u7ng2")

[node name="MobSpawner3D7" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 96.7481, 3.14008, 1.19049)
mob_to_spawn = ExtResource("5_ehur8")

[node name="MobSpawner3D8" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80.9487, -0.838068, 20.8324)
mob_to_spawn = ExtResource("6_u7ng2")

[node name="MobSpawner3D6" parent="." instance=ExtResource("4_lehy3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.9549, -0.562136, 19.3544)
mob_to_spawn = ExtResource("6_u7ng2")

[node name="WorldEnvironment2" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i6xss")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeathMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1716.0
offset_bottom = 881.0
script = ExtResource("13_lfwi1")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DeathMenu"]
layout_mode = 0
offset_left = -40.0
offset_right = 1749.0
offset_bottom = 890.0
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/DeathMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = -126.0
offset_right = 1721.0
offset_bottom = 739.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DeathMenu/CenterContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[node name="LblReason" type="Label" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnRestart" type="Button" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Restart"

[node name="BtnMainMenu" type="Button" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Menu"

[node name="modell" type="Node3D" parent="."]

[node name="International Space Station" parent="modell" instance=ExtResource("14_pgott")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 8.04709, -5.43557, 16.0962)

[node name="Platform2" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.51074, -5.2818, -21.7987)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform2" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform3" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.9336, -5.2818, -21.5549)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform3" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform4" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.8901, -5.2818, -10.921)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform4" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform5" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.71662, -5.2818, -10.9676)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform5" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform8" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.51074, -5.2818, 42.941)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform8" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform9" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.9336, -5.2818, 43.1848)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform9" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform10" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.8901, -5.2818, 53.8187)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform10" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform11" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -4.02206, -5.2818, 53.772)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform11" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform6" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -1.49256, -5.39616, 10.0541)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform6" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform7" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -1.50341, -5.2818, 21.5694)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform7" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform12" type="CSGBox3D" parent="modell"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 8.37049, -4.42339, 15.0634)
visible = false
use_collision = true
size = Vector3(2.88062, 10.4364, 82.6698)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell/Platform12" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="modell2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 37.098, 0, 23.9938)

[node name="International Space Station" parent="modell2" instance=ExtResource("14_pgott")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 8.04709, -5.43557, 16.0962)

[node name="Platform2" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.51074, -5.2818, -21.7987)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform2" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform3" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.9336, -5.2818, -21.5549)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform3" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform4" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.8901, -5.2818, -10.921)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform4" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform5" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.71662, -5.2818, -10.9676)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform5" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform8" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -2.51074, -5.2818, 42.941)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform8" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform9" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.9336, -5.2818, 43.1848)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform9" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform10" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 18.8901, -5.2818, 53.8187)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform10" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform11" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -4.02206, -5.2818, 53.772)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform11" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform6" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -1.49256, -5.39616, 10.0541)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform6" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform7" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, -1.50341, -5.2818, 21.5694)
visible = false
use_collision = true
size = Vector3(18.9785, 10.4364, 8)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform7" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Platform12" type="CSGBox3D" parent="modell2"]
transform = Transform3D(0.957517, 0, 0, 0, 1, 0, 0, 0, 0.933064, 8.37049, -4.42339, 15.0634)
visible = false
use_collision = true
size = Vector3(2.88062, 10.4364, 82.6698)
material = ExtResource("9_t6tnk")

[node name="Large Building" parent="modell2/Platform12" instance=ExtResource("10_14fru")]
transform = Transform3D(18.2331, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Sketchfab_Scene" parent="modell2" instance=ExtResource("11_0q100")]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, -188.064, 4.99065, 111.496)

[node name="Easter rabbit" parent="modell2/Sketchfab_Scene" instance=ExtResource("12_bdbmc")]
transform = Transform3D(-0.262846, 0, 0.964838, 0, 1, 0, -0.964838, 0, -0.262846, 0.316603, 1.11932, 0)

[node name="robot01" parent="." instance=ExtResource("13_pgott")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 26.4028, 4.42161, 30.3321)
script = ExtResource("14_cyi1s")

[node name="robot02" parent="." instance=ExtResource("13_pgott")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 15.126, 4.42161, 30.3321)
script = ExtResource("14_cyi1s")

[node name="robot03" parent="." instance=ExtResource("13_pgott")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 15.126, 4.42161, 43.2865)
script = ExtResource("14_cyi1s")

[node name="robot04" parent="." instance=ExtResource("13_pgott")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.41777, 4.42161, 43.2865)
script = ExtResource("14_cyi1s")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-0.476655, 0, -0.906893, 0, 1.02453, 0, 0.906893, 0, -0.476655, 7.79847, 0.775578, 51.4001)
modulate = Color(0.853181, 1, 0.339244, 1)
text = "jump → Space           (ปุ่มเว้นวรรค) ใช้สำหรับ “กระโดด”   
move_left → A           ใช้สำหรับ “เดินไปทางซ้าย”
move_right → D        ใช้สำหรับ “เดินไปทางขวา”
move_forward → W        ใช้สำหรับ “เดินไปข้างหน้า”
move_back → S       ใช้สำหรับ “เดินถอยหลัง”

shoot → Left Mouse Button (คลิกซ้าย)   ใช้สำหรับ “ยิงกระสุนปกติ” 
Right Mouse Button (คลิกขวา)          ใช้สำหรับ “ยิงกระสุนพิเศษที่ทรงพลัง” "
font = ExtResource("15_cyi1s")
font_size = 100

[node name="Label3D2" type="Label3D" parent="."]
transform = Transform3D(-0.476655, 0, -0.906893, 0, 1.02453, 0, 0.906893, 0, -0.476655, 7.79847, -0.713049, 70.1306)
double_sided = false
no_depth_test = true
modulate = Color(0.853181, 1, 0.339244, 1)
text = "รวบรวมคะแนนที่จะได้จากการฆ่ามอนสเตอร์เพื่อผ่านด่าน"
font = ExtResource("15_cyi1s")
font_size = 100
outline_size = 14

[node name="Label2" type="Label" parent="."]
offset_left = 425.0
offset_top = 18.0
offset_right = 1527.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 50
text = "สะสม 50 แต้มเพื่อผ่านด่านนี้"

[connection signal="body_entered" from="KillPlane" to="." method="_on_kill_plane_body_entered"]
[connection signal="mob_spawned" from="MobSpawner3D" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D2" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D3" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D4" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D5" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D7" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D8" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D6" to="." method="_on_mob_spawner_3d_mob_spawned"]
